# CatalystGUI

./: .gitmodules  7873.tmp  CMakeLists.txt  CONTRIBUTING.md  CryptoNoteWallet.cmake  Makefile-prepend  README.md
src/: AliasProvider.cpp  AliasProvider.h  CommandLineParser.cpp  CommandLineParser.h  CryptoNoteWrapper.cpp  CryptoNoteWrapper.h  CurrencyAdapter.cpp  CurrencyAdapter.h  LoggerAdapter.cpp  LoggerAdapter.h  Miner.cpp  Miner.h  NodeAdapter.cpp  NodeAdapter.h  Settings.cpp  Settings.h  SignalHandler.cpp  StratumClient.cpp  StratumClient.h  WalletAdapter.cpp  WalletAdapter.h  Worker.cpp  Worker.h  catawallet.desktop  main.cpp
src/gui/: AboutDialog.cpp  AboutDialog.h  AddressBookDialog.cpp  AddressBookDialog.h  AddressBookFrame.cpp  AddressBookFrame.h  AddressBookModel.cpp  AddressBookModel.h  AnimatedLabel.cpp  AnimatedLabel.h  ChangePasswordDialog.cpp  ChangePasswordDialog.h  DepositDetailsDialog.cpp  DepositDetailsDialog.h  DepositListModel.cpp  DepositListModel.h  DepositModel.cpp  DepositModel.h  DepositsFrame.cpp  DepositsFrame.h  ExitWidget.cpp  ExitWidget.h  ImportKeyDialog.cpp  ImportKeyDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.mm  Message.cpp  Message.h  MessageAddressFrame.cpp  MessageAddressFrame.h  MessageDetailsDialog.cpp  MessageDetailsDialog.h  MessagesFrame.cpp  MessagesFrame.h  MessagesModel.cpp  MessagesModel.h  MiningFrame.cpp  MiningFrame.h  NewAddressDialog.cpp  (+42 more)
src/gui/ui/: aboutdialog.ui  mainwindow.ui
